environments/prod/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
  namespace: prod
spec:
  replicas: 6
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      containers:
      - name: rollouts-demo
        image: argoproj/rollouts-demo:blue
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 5
  strategy:
    canary:
      stableService: rollouts-demo-stable
      canaryService: rollouts-demo-canary
      trafficRouting:
        nginx:
          stableIngress: rollouts-demo
      steps:
      - setWeight: 5
      - pause: {duration: 30}
      - setWeight: 25
      - pause: {duration: 30}
      - setWeight: 60
      - pause: {duration: 30}
      - setWeight: 100
